--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
 
       <!-- Navigation menu -->
       <nav class="nav-menu">
-        <a href="#about">ABOUT</a>
-        <a href="#projects">PORTFOLIO</a>
-        <a href="#contact">CONTACT</a>
-        <a href="#faq">FAQ</a>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#Experience">Experience</a>
+        <a href="#contact">Contact</a>
+        <a href="#faq">MyAI</a>
       </nav>
 
     </div> <!-- close header-text div -->
