--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title tab in browser -->
-     <title>Clarke Pudpud | Developer</title>
+     <title>Clarke Pudpud | Website</title>
     
     <!-- Link with CSS -->
      <link rel="stylesheet" href="style.css" />
@@ -37,8 +37,8 @@
 
       <!-- Name -->
       <a href="#" id="homeBtn" class="header-link">
-        <h1>CLARKE PUDPUD</h1>
-        <p id="titleClick">AI DEVELOPER</p>
+        <h1>Clarke Pudpud</h1>
+        <p id="titleClick">Full-Stack Developer</p>
       </a>
 
       <!-- Navigation menu -->
