--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="#projects">Projects</a>
         <a href="#Experience">Experience</a>
         <a href="#contact">Contact</a>
-        <a href="#faq">MyAI</a>
+        <a href="#faq">FAQ</a>
       </nav>
 
     </div> <!-- close header-text div -->
