--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
-        <a href="#Experience">Experience</a>
+        <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
         <a href="#faq">FAQ</a>
       </nav>
